<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="title_activity_settings">Settings</string>
    <string name="work_action_service_name">WorkActionService</string>
    <string name="work_action_service_description">
		Service to handle different action in backup and restore notification
	</string>
    <string name="fab_behaviour" translatable="false">@null</string>
    <string name="label_accounts">Accounts</string>
    <string name="label_insert_account">Create Account</string>
    <string name="label_update_account">Edit Account</string>
    <string name="label_persons_list">People</string>
    <string name="label_insert_person">Add Person</string>
    <string name="label_update_person">Edit Person</string>
    <string name="label_transactions_list">Transactions</string>
    <string name="label_money_transfer">Send Money</string>
    <string name="label_money_transfer_history">Transfer History</string>
    <string name="label_new_money_transfer">New Money Transfer</string>
    <string name="label_edit_money_transfer">Edit Money Transfer</string>
    <string name="label_total_balance">Total Balance</string>
    <string name="label_total_due">Receivable</string>
    <string name="label_filter_transaction_history">Filter</string>
    <string name="label_loading">Loading</string>
    <string name="account_name">Account Name</string>
    <string name="person_name">Person Name</string>
    <string name="amount">Amount</string>
    <string name="account">Account</string>
    <string name="person">Person</string>
    <string name="item_none">None</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="retry">Retry</string>
    <string name="add_debit">Add Debit</string>
    <string name="add_credit">Add Credit</string>
    <string name="no_account">No Account</string>
    <string name="no_person">No Person</string>
    <string name="no_transaction">No Transaction</string>
    <string name="no_money_transfer_history">No History</string>
    <string name="balance">Balance</string>
    <string name="due_payment">Receivable</string>
    <string name="advanced_payment">Payable</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="min_date">From Date</string>
    <string name="max_date">To Date</string>
    <string name="search_account">Search Account</string>
    <string name="search_person">Search Person</string>
    <string name="dates_and_types">Dates And Types</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="account_from">From</string>
    <string name="account_to">To</string>
    <string name="label_total_asset">Total Assets</string>
    <string name="label_total_liability">Total Liabilities</string>
    <string name="backup">Backup</string>
    <string name="description_backup">
		Backup your data into your external storage . Backup File(s) can be found under ExpenseTracker > backup directory.
		Keep the latest backup file safe to restore the data after reinstall . Never forget to make a backup before uninstall.
	</string>
    <string name="notification_start_local_backup">Local backup in progress. Please wait till finish</string>
    <string name="notification_end_local_backup">Local backup completed successfully to file: %1$s</string>
    <string name="notification_error_local_backup">Error occurred during local backup</string>
    <string name="restore">Restore</string>
    <string name="description_restore">
		Restore your old data from local storage. Click the RESTORE button bellow and choose the file to restore.
	</string>
    <string name="message_restore_file_not_selected">No file selected to restore</string>
    <string name="notification_start_restore">Restore in progress. Please wait till finish</string>
    <string name="notification_end_restore">Restore completed successfully</string>
    <string name="notification_error_restore">Error occurred during restore</string>
    <string name="title_auto_delete">Auto Delete</string>
    <string name="summery_auto_delete">Automatically delete all data which are older than specified amount of time.
		This will only delete date oriented data like transaction and money transfers.</string>
    <string name="notification_start_auto_delete">Auto delete old entries in progress…</string>
    <string name="notification_end_auto_delete">App data deleted successfully</string>
    <string name="title_clear_all">Clear All Data</string>
    <string name="summery_clear_all">Clear all your app data. This will not delete your settings.
		If have done a backup then you can restore data after reinstall </string>
    <string name="message_clear_all">You are about to clear all app data. You will loss all of your current app data permanently. Are you sure?</string>
    <string name="notification_start_clear_all">Clear app data in progress. Please wait till finish.</string>
    <string name="notification_error_clear_all">Error occurred during clear app data</string>
    <string name="notification_end_clear_all">App data cleared successfully</string>
    <string name="screen_account">Accounts</string>
    <string name="screen_people">People</string>
    <string name="screen_dates">Dates</string>
    <string name="screen_miscellaneous">Miscellaneous</string>
    <string name="max_amount">Max Amount</string>
    <string name="min_amount">Min Amount</string>
    <string name="filter_date_all">All</string>
    <string name="filter_date_today">Today</string>
    <string name="filter_date_yesterday">Yesterday</string>
    <string name="filter_date_specific">On Date</string>
    <string name="filter_date_this_week">This Week</string>
    <string name="filter_date_last_week">Last Week</string>
    <string name="filter_date_this_month">This Month</string>
    <string name="filter_date_last_month">Last Month</string>
    <string name="filter_date_custom_range">Custom Range</string>
    <string name="error_empty_account_name">no account name provided</string>
    <string name="account_save_successful">account saved</string>
    <string name="account_save_unsuccessful">account not saved</string>
    <string name="error_empty_person_name">no person name provided</string>
    <string name="person_save_successful">person saved</string>
    <string name="person_save_unsuccessful">person not saved</string>
    <string name="error_invalid_amount">invalid amount</string>
    <string name="error_negative_amount">negative amount not allowed</string>
    <string name="error_same_account_money_transfer">can not transfer money between same accounts</string>
    <string name="error_insufficient_balance">account does not has sufficient balance</string>
    <string name="transaction_history_save_successful">history saved</string>
    <string name="transaction_save_unsuccessful">transaction not saved</string>
    <string name="money_transfer_successful">money transfer history saved</string>
    <string name="money_transfer_unsuccessful">money transfer history not saved</string>
    <string name="message_money_transfer_accounts_not_enough">
		At least two accounts are required for money transfer.
	</string>
    <string name="message_no_account_for_transaction">
		There is no account for transaction. Please add at least one account.
	</string>
    <string name="description_open_settings_allow_permission">
		Permission to use external storage is disabled which is required for backup and restore operations.
		Please enable this permission in System\'s App Settings under the App\'s permission section.
	</string>
    <string name="open_settings">Open Settings</string>
    <string name="last_backup_date">Last Backup: </string>
    <string name="backup_never">Never</string>
    <string name="notification_title_backup">Backup</string>
    <string name="notification_title_restore">Restore</string>
    <string name="title_choose_restore_file">Restore File</string>
    <string name="schedule_auto_backup">Schedule Auto Backup</string>
    <string name="schedule_never">Never</string>
    <string name="schedule_daily">Daily</string>
    <string name="schedule_weekly">Weekly</string>
    <string name="schedule_monthly">Monthly</string>
    <string name="message_error_file_access">
		Read and write to external storage is not allowed for this app. Open setting and allow permission now.
	</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_backup_restore">Backup And Restore</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_change_log">Change Log</string>
    <string name="menu_about">About</string>
    <string name="menu_filter">Filter</string>
    <string name="next">Next</string>
    <string name="label_pay_amount">Pay %1$s</string>
    <string name="error_invalid_amount_not_positive">enter amount greater than zero</string>
    <string name="error_no_amount">no amount provided</string>
    <string name="back">Back</string>
    <string name="pay_to">Pay To</string>
    <string name="pay_from">Pay From</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="add_due">Add Due</string>
    <string name="pay_due">Pay Due</string>
    <string name="send_money">Send Money</string>
    <string name="error_no_person_selected">No Person Selected</string>
    <string name="error_no_account_selected">no account selected</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_ask_add_more_transaction">Want to add more?</string>
    <string name="add_money">Add Money</string>
    <string name="transaction_input_progress_text">Saving…</string>
    <string name="error_empty_input">empty input</string>
    <string name="error_invalid_numeric_value">not a valid numeric value</string>
    <string name="account_not_found">no account found</string>
    <string name="person_not_found">no person found</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="label_total_borrow">Payable</string>
    <string name="label_people">People</string>
    <string name="description_add_history">add new transaction history</string>
    <string name="label_unknown">Unknown</string>
    <string name="text_transaction_history_description_due">Amount paid on behalf of %1$s from %2$s</string>
    <string name="text_transaction_history_description_borrow">Amount borrowed from %1$s, received in %2$s</string>
    <string name="text_transaction_history_description_pay_due">Due paid by %1$s, received in %2$s</string>
    <string name="text_transaction_history_description_pay_borrow">Amount paid to %1$s from %2$s</string>
    <string name="label_group_transaction_histories_monthly">Monthly</string>
    <string name="label_group_transaction_histories_daily">Daily</string>
    <string name="label_group_transaction_histories">Group Histories</string>
    <string name="label_income">Income</string>
    <string name="label_expense">Expense</string>
    <string name="label_due">Due</string>
    <string name="label_pay_borrow">Payable Paid</string>
    <string name="label_pay_due">Received Receivable</string>
    <string name="label_transfer_money">Money Transfer</string>
    <string name="label_due_transfer">Receivable Transfer</string>
    <string name="label_borrow_transfer">Payable Transfer</string>
    <string name="label_borrow">Borrow</string>
    <string name="label_borrow_to_due_transfer">Payable to Receivable Transfer</string>
    <string name="description_apply_filter">apply filter</string>
</resources>