<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/filter_date_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/filter_date_all" />
        <RadioButton
            android:id="@+id/rb_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_date_today"/>
        <RadioButton
            android:id="@+id/rb_yesterday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_date_yesterday"/>
        <RadioButton
            android:id="@+id/rb_specific"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_date_specific"/>

        <LinearLayout
            android:id="@+id/pick_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical_small"
                android:layout_weight="0"
                android:text="@string/date"
                android:textSize="@dimen/text_size_medium" />

            <Button
                android:id="@+id/when"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_horizontal_small"
                android:layout_weight="1"
                tools:text="3-Mar-2021" />

        </LinearLayout>
        <RadioButton
            android:id="@+id/rb_this_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_date_this_week"/>
        <RadioButton
            android:id="@+id/rb_last_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_date_last_week"/>
        <RadioButton
            android:id="@+id/rb_this_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_date_this_month"/>
        <RadioButton
            android:id="@+id/rb_last_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_date_last_month"/>
        <RadioButton
            android:id="@+id/rb_custom_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_date_custom_range"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pick_date_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/min_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_min_date"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1-Jan-2020" />

            <Button
                android:id="@+id/max_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_max_date"
                app:layout_constraintTop_toBottomOf="@+id/min_date"
                tools:text="15-Feb-2020" />

            <TextView
                android:id="@+id/label_max_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:paddingTop="@dimen/margin_vertical_small"
                android:text="@string/max_date"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/min_date" />

            <TextView
                android:id="@+id/label_min_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:paddingTop="@dimen/margin_vertical_small"
                android:text="@string/min_date"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RadioGroup>
</ScrollView>