<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/group_by"
        android:title="@string/label_group_transaction_histories"
        android:icon="@drawable/ic_baseline_visibility_24"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/group_daily"
                    android:title="@string/label_group_transaction_histories_daily"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/group_monthly"
                    android:title="@string/label_group_transaction_histories_monthly"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>