<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FilterHistoryFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/date_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeWidth="2dp"
                app:strokeColor="@color/border_color"
                android:padding="12dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:drawableLeftCompat="@drawable/ic_baseline_calendar_month"
                app:drawableTint="@color/primary_text_color"
                android:drawablePadding="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:textColor="@color/primary_text_color"
                tools:text="11-Nov-2023 - 02-Dec-2023"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:dividerColor="@color/border_color"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/container_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:singleLine="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/type_income"
                    style="@style/Widget.AppTheme.CheckableChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/label_income"
                    app:chipIcon="@drawable/ic_baseline_arrow_inward_24"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/type_expense"
                    style="@style/Widget.AppTheme.CheckableChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/label_expense"
                    app:chipIcon="@drawable/ic_baseline_arrow_outward_24"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/type_money_transfer"
                    style="@style/Widget.AppTheme.CheckableChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/label_transfer_money"
                    app:chipIcon="@drawable/ic_baseline_send_24"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/type_due"
                    style="@style/Widget.AppTheme.CheckableChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/label_due"
                    app:chipIcon="@drawable/ic_rupee_remove"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/type_borrow"
                    style="@style/Widget.AppTheme.CheckableChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/label_borrow"
                    app:chipIcon="@drawable/ic_rupee_arrow_inward"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/type_pay_due"
                    style="@style/Widget.AppTheme.CheckableChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/label_pay_due"
                    app:chipIcon="@drawable/ic_rupee_add"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/type_pay_borrow"
                    style="@style/Widget.AppTheme.CheckableChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/label_pay_borrow"
                    app:chipIcon="@drawable/ic_rupee_arrow_outward"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/type_due_transfer"
                    style="@style/Widget.AppTheme.CheckableChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/label_due_transfer"
                    app:chipIcon="@drawable/ic_due_transfer_24"
                    tools:ignore="TextContrastCheck" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/type_borrow_transfer"
                    style="@style/Widget.AppTheme.CheckableChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/label_borrow_transfer"
                    app:chipIcon="@drawable/ic_borrow_transfer_24"
                    tools:ignore="TextContrastCheck" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/type_borrow_to_due_transfer"
                    style="@style/Widget.AppTheme.CheckableChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/label_borrow_to_due_transfer"
                    app:chipIcon="@drawable/ic_borrow_to_due_transfer_24"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:dividerColor="@color/border_color"
                android:visibility="gone"
                tools:visibility="visible"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_accounts"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:text="@string/label_accounts"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/primary_text_color"
                app:drawableRightCompat="@drawable/ic_add"
                app:drawableTint="@color/primary_text_color"
                android:visibility="gone"
                tools:visibility="visible"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/container_accounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:singleLine="false"
                android:visibility="gone"
                tools:visibility="visible">

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.divider.MaterialDivider
                android:id="@id/divider3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:dividerColor="@color/border_color"
                android:visibility="gone"
                tools:visibility="visible"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_people"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:text="@string/label_people"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/primary_text_color"
                app:drawableRightCompat="@drawable/ic_add"
                app:drawableTint="@color/primary_text_color"
                android:visibility="gone"
                tools:visibility="visible"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/container_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                app:singleLine="false"
                android:visibility="gone"
                tools:visibility="visible">

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/apply_filter"
        android:layout_width="@dimen/fab_size_medium"
        android:layout_height="@dimen/fab_size_medium"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/description_apply_filter"
        app:fabCustomSize="@dimen/fab_size_medium"
        app:srcCompat="@drawable/ic_filter"
        app:tint="@color/fab_icon_tint"
        tools:ignore="RtlHardcoded,ImageContrastCheck" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>